--- a/app/lang/lang_it.xml
+++ b/app/lang/lang_it.xml
@@ -275,7 +275,7 @@ Lista gruppi:
     -->
 
     <sentence id="BOT_WELCOME_MSG">Ciao!
-Grazie per aver scelto il Telegram Payment Bot.
+Grazie per aver scelto il **Telegram Payment Bot**.
 Usa __/help__ per vedere la lista dei comandi supportati.
 Non dimenticarti di **farmi amministratore del gruppo** o non potrò funzionare correttamente.</sentence>
     <sentence id="TASK_RUNNING_MSG">attivo</sentence>
